<resources>
    <string name="app_name">And_practice</string>
    <string name="hello_android">Hello Android!</string>
    <string name="home_nav">홈</string>
    <string name="buy_nav">구매하기</string>
    <string name="wish_nav">위시리스트</string>
    <string name="cart_nav">장바구니</string>
    <string name="profile_nav">프로필</string>
    <string name="home_title">Discover</string>
    <string name="home_subtitle">9월 4일 목요일</string>
    <string name="buy_tab_1">전체</string>
    <string name="buy_tab_2"><![CDATA[Tops & T-Shirts]]></string>
    <string name="buy_tab_3">Shoes</string>
    <string name="wish_title">위시리스트</string>
    <string name="cart_text1">장바구니가 비어 있습니다.</string>
    <string name="cart_text2">제품을 추가하면 여기에 표시됩니다.</string>
    <string name="profile_image_desc">프로필 이미지</string>
    <string name="profile_nickname_placeholder">닉네임</string>
    <string name="profile_edit">프로필 수정</string>
    <string name="profile_edit_short">편집</string>
    <string name="profile_action_orders">주문</string>
    <string name="profile_action_pass">패스</string>
    <string name="profile_action_event">이벤트</string>
    <string name="profile_action_setting">설정</string>
    <string name="profile_benefit_title">나이키 멤버 혜택</string>
    <string name="profile_benefit_count">0개 사용 가능</string>
    <string name="profile_following_title">팔로잉</string>
    <string name="profile_following_title_format">팔로잉 (%1$d)</string>
    <string name="profile_following_image_desc">팔로잉 이미지</string>
    <string name="profile_join_date">회원 가입일: 2025년 9월</string>
    <string name="profile_arrow">›</string>
    <string name="error_login_required">로그인이 필요합니다.</string>
    <string name="error_bad_request">입력값을 다시 확인해주세요.</string>
    <string name="error_invalid_format">요청 형식이 올바르지 않습니다.</string>
    <string name="error_invalid_date">날짜 형식이 올바르지 않습니다.</string>
    <string name="error_forbidden">이 기능에 접근할 수 없습니다.</string>
    <string name="error_not_found">요청한 데이터를 찾을 수 없습니다.</string>
    <string name="error_duplicate_resource">이미 존재하는 데이터입니다.</string>
    <string name="error_concurrent_modification">동시 수정 충돌이 발생했습니다.</string>
    <string name="error_server">서버 오류가 발생했습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="error_network">인터넷 연결을 확인해주세요.</string>
    <string name="error_unknown">문제가 발생했습니다. 다시 시도해주세요.</string>
</resources>
